--- a/nginx/nginx-deployment.yaml
+++ b/nginx/nginx-deployment.yaml
@@ -31,3 +31,29 @@ spec:
     - port: 80
       targetPort: 80
   type: LoadBalancer
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-backend
+spec:
+  selector:
+    app: nginx
+  type: ClusterIP
+  ports:
+    - targetPort: 80
+      port: 80
+---
+apiVersion: projectcontour.io/v1
+kind: HTTPProxy
+metadata:
+  name: nginx-test
+spec:
+  virtualhost:
+    fqdn: nginx.lab.ellin.net
+  routes:
+  - conditions:
+    - prefix: /
+    services:
+    - name: nginx-backend
+      port: 80
