--- a/nfs-provisioner/nfs-provisioner.yaml
+++ b/nfs-provisioner/nfs-provisioner.yaml
@@ -6,7 +6,7 @@ spec:
   forProvider:
     chart:
       name: nfs-subdir-external-provisioner
-      repository: https://kubernetes-sigs.github.io/
+      repository: https://kubernetes-sigs.github.io/nfs-subdir-external-provisioner
     namespace: nfs-provisioner
     set:
       - name: nfs.server
