--- a/cluster-groups/homelab/test-kapp.yaml
+++ b/cluster-groups/homelab/test-kapp.yaml
@@ -4,7 +4,7 @@ metadata:
   name: config-with-sops
   namespace: default
 spec:
-  serviceAccountName: default-ns
+  serviceAccountName: default
   fetch:
   - git:
       url: https://github.com/jeffellin/tmc-experiments
