--- a/gitops/seed/contour-data-values.yaml
+++ b/gitops/seed/contour-data-values.yaml
@@ -12,7 +12,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: contour-values
-  namespace: #@ data.values.contour.namespace
+  namespace: default
   annotations:
     kapp.k14s.io/change-rule: "delete after deleting contour"
 type: Opaque
