--- a/gitops/seed/contour-package-install.yaml
+++ b/gitops/seed/contour-package-install.yaml
@@ -2,7 +2,7 @@ apiVersion: packaging.carvel.dev/v1alpha1
 kind: PackageInstall
 metadata:
   name: contour
-  namespace: contour
+  namespace: default
   annotations:
     kapp.k14s.io/change-group: "contour"
 spec:
