--- a/gitops/seed/cert-manager-package-install.yaml
+++ b/gitops/seed/cert-manager-package-install.yaml
@@ -1,7 +1,7 @@
 apiVersion: packaging.carvel.dev/v1alpha1
 kind: PackageInstall
 metadata:
-  name: contour
+  name: certmanager
   namespace: default
   annotations:
     kapp.k14s.io/change-group: "certmanager"
