--- a/gitops/seed/cert-manager-package-install.yaml
+++ b/gitops/seed/cert-manager-package-install.yaml
@@ -2,7 +2,7 @@ apiVersion: packaging.carvel.dev/v1alpha1
 kind: PackageInstall
 metadata:
   name: certmanager
-  namespace: default
+  namespace: ellin-system
   annotations:
     kapp.k14s.io/change-group: "certmanager"
 spec:
