--- a/gitops/seed/contour-package-install.yaml
+++ b/gitops/seed/contour-package-install.yaml
@@ -2,7 +2,7 @@ apiVersion: packaging.carvel.dev/v1alpha1
 kind: PackageInstall
 metadata:
   name: contour
-  namespace: default
+  namespace: ellin-system
   annotations:
     kapp.k14s.io/change-group: "contour"
     kapp.k14s.io/change-rule: "upsert after upserting certmanager"
