add tap age setup

--- a/gitops/tap-full/tap-app-.yaml
+++ b/gitops/tap-full/tap-app-.yaml
@@ -24,7 +24,7 @@ spec:
   - sops:
       age:
         privateKeysSecretRef:
-          name: sync-age-identity
+          name: age-key
   - ytt:
       paths:
       - config
