create our namesapce first

--- a/roles/homelab/kustomization.yaml
+++ b/roles/homelab/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 generatorOptions:
   disableNameSuffixHash: true
 resources:
+- ./../base
 - ./../contour
 - ./../externaldns
 - ./../certmanager
