--- a/roles/base/test.yaml
+++ b/roles/base/test.yaml
@@ -1,10 +1,5 @@
 apiVersion: v1
-kind: Pod
+kind: Namespace
 metadata:
-  name: myapp-pod
-  labels:
-    app: myapp
-spec:
-  containers:
-  - name: nginx
-    image: nginx:latest
+  name: ellin-system
+
