--- a/roles/externaldns/external-dns-app-install.yaml
+++ b/roles/externaldns/external-dns-app-install.yaml
@@ -15,6 +15,6 @@ spec:
           name: age-key
   - ytt: 
       paths:
-      - gitops/externaldns
+      - gitops/external-dns
   deploy:
   - kapp: {}
