--- a/gitops/crossplane/kapp-config.yaml
+++ b/gitops/crossplane/kapp-config.yaml
@@ -1,17 +1,7 @@
 apiVersion: kapp.k14s.io/v1alpha1
 kind: Config
 waitRules:
-- supportsObservedGeneration: true
-  conditionMatchers:
-  - type: Healthy
-    status: "True"
-    success: true
-  - type: Healthy
-    status: "False"
-    failed: true
-  resourceMatchers:
-  - apiVersionKindMatcher: {apiVersion: "pkg.crossplane.io/v1", kind: "Provider"}
-- supportsObservedGeneration: true
+- supportsObservedGeneration: false
   conditionMatchers:
   - type: Ready
     status: "True"
