--- a/gitops/external-dns/external-dns-secret-export.yaml
+++ b/gitops/external-dns/external-dns-secret-export.yaml
@@ -8,6 +8,7 @@ metadata:
 spec:
   toNamespaces:
   - tanzu-system-service-discovery
+  - cert-manager
 ---
 apiVersion: secretgen.carvel.dev/v1alpha1
 kind: SecretImport
