--- a/roles/base/install.yaml
+++ b/roles/base/install.yaml
@@ -1,3 +1,39 @@
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: input-resource-reader
+  namespace: vmware-system-tmc
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: input-resource-reader
+  namespace: vmware-system-tmc
+rules:
+- apiGroups:
+  - ""
+  resources:
+  - configmaps
+  verbs:
+  - get
+  - list
+  - watch
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: input-resource-reader
+  namespace: vmware-system-tmc
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: input-resource-reader
+subjects:
+- kind: ServiceAccount
+  name: input-resource-reader
+
+---
 apiVersion: secretgen.carvel.dev/v1alpha1
 kind: SecretTemplate
 metadata:
