--- a/roles/certmanager/certmanager-app-install.yaml
+++ b/roles/certmanager/certmanager-app-install.yaml
@@ -2,6 +2,7 @@ apiVersion: kappctrl.k14s.io/v1alpha1
 kind: App
 metadata:
   name: tmc-certmanager
+  namespace: ellin-system
 spec:
   serviceAccountName: default
   fetch:
