--- a/roles/externaldns/external-dns-app-install.yaml
+++ b/roles/externaldns/external-dns-app-install.yaml
@@ -2,6 +2,7 @@ apiVersion: kappctrl.k14s.io/v1alpha1
 kind: App
 metadata:
   name: tmc-external-dns
+  namespace: ellin-system
 spec:
   serviceAccountName: default
   fetch:
