--- a/gitops/nginx/nginx-deployment.yaml
+++ b/gitops/nginx/nginx-deployment.yaml
@@ -1,9 +1,11 @@
+#@ load("@ytt:data", "data")
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
   labels:
     app: nginx
+    cluster: #@ data.values.cluster_name
 spec:
   replicas: 3
   selector:
@@ -19,28 +21,4 @@ spec:
         image: nginx:1.14.2
         ports:
         - containerPort: 80
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: nginx-service
-spec:
-  selector:
-    app: nginx
-  ports:
-    - port: 80
-      targetPort: 80
-  type: LoadBalancer
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: nginx-backend
-spec:
-  selector:
-    app: nginx
-  type: ClusterIP
-  ports:
-    - targetPort: 80
-      port: 80
 ---
