--- a/roles/base/install.yaml
+++ b/roles/base/install.yaml
@@ -61,3 +61,11 @@ metadata:
   namespace: vmware-system-tmc
 spec:
   toNamespace: '*'
+---
+apiVersion: secretgen.carvel.dev/v1alpha1
+kind: SecretImport
+metadata:
+  name: cluster-name-secret
+  namespace: ellin-system
+spec:
+  fromNamespace: vmware-system-tmc
