--- a/gitops/base/config/install.yml
+++ b/gitops/base/config/install.yml
@@ -26,7 +26,7 @@ spec:
   - sops: 
       age:
         privateKeysSecretRef:
-          name: sync-age-identity
+          name: age-key
   - ytt:
       paths:
       - #@ "gitops/" + val
