--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -1,10 +1,12 @@
 default:
-  - external-dns
-  - cert-manager
+   roles:
+   - name: external-dns
+   - name: cert-manager
 k3s-local:
-  - external-dns
-  - cert-manager
-  - minio
+  roles:
+   - name: external-dns
+   - name: cert-manager
+   - name: minio
 tap:
   profiles:
     - name: tap-full
