--- a/gitops/base/config/install.yml
+++ b/gitops/base/config/install.yml
@@ -18,6 +18,7 @@ metadata:
   labels:
      clusterName: #@ server
      configuration:  #@ selected
+     foo: bar
 spec:
   serviceAccountName: default
   fetch:
