--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -11,7 +11,7 @@ k3s-local:
    - name: minio
   options:
     minio: install
-    domain: miniop.lab.ellin.net
+    domain: minio.lab.ellin.net
 tap:
   roles:
     - name: tap-full
