--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -14,6 +14,7 @@ k3s-local:
     domain: minio.lab.ellin.net
 tap:
   roles:
+    - name: external-dns 
     - name: tap-full
   options:
     domain: tapdemo.lab.ellin.net
