rename config for tap cluster name

--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -12,7 +12,7 @@ k3s-local:
   options:
     minio: install
     domain: minio.lab.ellin.net
-tap:
+eks.aws-june23.us-east-2.test:
   roles:
     - name: external-dns 
     - name: tap-full
