--- a/gitops/tap-full/tap-app.yaml
+++ b/gitops/tap-full/tap-app.yaml
@@ -30,5 +30,7 @@ spec:
       - config
       valuesFrom:
       - path: values
+      - secretRef:
+          name: tanzu-gitops
   deploy:
   - kapp: {}
