--- a/gitops/minio/minio-release.yaml
+++ b/gitops/minio/minio-release.yaml
@@ -17,9 +17,9 @@ spec:
         name: bitnami
       interval: 1m
   values:
- ##   extraEnvVars:
- ##     - name: MINIO_SERVER_URL
- ##       value: #@ data.values.domain
+ #!   extraEnvVars:
+ #!     - name: MINIO_SERVER_URL
+ #!       value: #@ data.values.domain
     persistence:
       storageClass: nfs-client
       size: 500Gi
