lets limit the aws providers

--- a/gitops/crossplane-provider/aws-provider.yaml
+++ b/gitops/crossplane-provider/aws-provider.yaml
@@ -6,5 +6,4 @@ metadata:
     kapp.k14s.io/change-group: "crossplane/aws-provider"
     kapp.k14s.io/change-rule: "upsert after upserting crossplane/config"
 spec:
-spec:
-  package: xpkg.upbound.io/upbound/provider-aws:v0.37.0
+  package: xpkg.upbound.io/upbound/provider-aws-s3:v0.38.0
