add crossplane cluster

--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -4,6 +4,11 @@ default:
    - name: cert-manager
   options:
     domain: default
+crossplane:
+  roles:
+   - name: external-dns
+   - name: cert-manager
+   - name: crossplane
 k3s-local:
   roles:
    - name: external-dns
