--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -2,6 +2,7 @@ default:
   roles:
    - name: external-dns
    - name: cert-manager
+   - name: contour
   options:
     domain: default
 crossplane:
