--- a/gitops/minio/minio-release.yaml
+++ b/gitops/minio/minio-release.yaml
@@ -20,10 +20,18 @@ spec:
     persistence:
       storageClass: nfs-client
       size: 500Gi
-    ingress:
+    apiIngress:
       enabled: true
       ingressClassName: traefik
       hostname: #@ data.values.domain
+      annotations:
+        cert-manager.io/cluster-issuer: letsencrypt-contour-cluster-issuer
+        traefik.ingress.kubernetes.io/router.entrypoints: websecure
+      tls: true  
+    ingress:
+      enabled: true
+      ingressClassName: traefik
+      hostname: #@ "api."+data.values.domain
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-contour-cluster-issuer
         traefik.ingress.kubernetes.io/router.entrypoints: websecure
