--- a/gitops/external-dns/external-dns-values.yaml
+++ b/gitops/external-dns/external-dns-values.yaml
@@ -11,6 +11,7 @@ deployment:
   args:
     - --source=service
     - --source=ingress
+    - --debug
     - --source=contour-httpproxy
     - --policy=upsert-only
     - --registry=txt
