--- a/gitops/external-dns/external-dns-values.yaml
+++ b/gitops/external-dns/external-dns-values.yaml
@@ -11,7 +11,7 @@ deployment:
   args:
     - --source=service
     - --source=ingress
-    - ---log-level=debug
+    - --log-level=debug
     - --source=contour-httpproxy
     - --policy=upsert-only
     - --registry=txt
