--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -32,6 +32,7 @@ tap:
 tap-run-1:
   roles:
     - name: external-dns 
+    - name: cert-manager
     - name: contour
     - name: tap-run
   options:
