--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -31,11 +31,14 @@ tap:
           ingress_domain: home.lab.ellin.net
 tap-run-1:
   roles:
+    - name: metallb
     - name: external-dns 
     - name: cert-manager
     - name: contour
     - name: tap-run
   options:
+    metallb:
+      addresses: 192.168.1.14-192.168.1.25
     tap_install:
       values:
         cnrs:
