--- a/gitops/base/config/config-secret.yaml
+++ b/gitops/base/config/config-secret.yaml
@@ -8,17 +8,19 @@
 #@   else:
 #@    selected="default"
 #@  end
-#@  if hasattr(data.values[selected],"options"):
-#@    return data.values[selected].options
-#@  else: 
-#@    return selected
-#@  end
+#@    return data.values[selected]
 #@ end      
+
+#@ for val in config().roles:
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: tanzu-gitops
+  name: #@ "tanzu-gitops-" + val.name
   namespace: ellin-system
 stringData:
-  values.yaml: #@ yaml.encode(config())
+#@ if hasattr(val,"options"):  
+  values.yaml: #@ yaml.encode(val.options)
+ 
+#@ end
+#@ end      
