--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -1,6 +1,8 @@
 default:
   roles:
    - name: ako
+     options:
+       serverName: default 
    - name: external-dns
    - name: cert-manager
    - name: contour
