--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -2,7 +2,7 @@ default:
   roles:
    - name: ako
      options:
-       serverName: default 
+       clusterName: default 
    - name: external-dns
    - name: cert-manager
    - name: contour
