--- a/gitops/ako/ako-install.yaml
+++ b/gitops/ako/ako-install.yaml
@@ -17,7 +17,7 @@ spec:
       interval: 1m
   valuesFrom:
     - kind: Secret
-      name: avi-secrets
+      name: avi-secret
       valuesKey: avi.yaml
   values:
     AKOSettings:
