--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -43,7 +43,19 @@ tap-build:
             cnrs:
               domain_name: build.lab.ellin.net
             shared:
-              ingress_domain: build.lab.ellin.net             
+              ingress_domain: build.lab.ellin.net   
+eks.aws-june23.us-east-2.test:
+  roles:
+    - name: external-dns 
+    - name: tap-full
+      options:
+        tap_install:
+          values:
+            cnrs:
+              domain_name: aws.cloud.ellin.net
+            shared:
+              ingress_domain: aws.cloud.ellin.net
+          
 tap-run-1:
   roles:
     - name: ako
