--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -44,7 +44,12 @@ tap-build:
 eks.aws-june23.us-east-2.test:
   roles:
     - name: external-dns 
-          
+tap-test:
+  roles:
+    - name: external-dns
+    - name: cert-manager
+    - name: contour
+    - name: tap-build
 tap-run-1:
   roles:
     - name: ako
