--- a/gitops/tap-full/tap-app.yaml
+++ b/gitops/tap-full/tap-app.yaml
@@ -31,6 +31,6 @@ spec:
       valuesFrom:
       - path: values
       - secretRef:
-          name: tanzu-gitops
+          name: tanzu-gitops-tap-full
   deploy:
   - kapp: {}
