--- a/gitops/tap-build/pivnet-registry-dependencies.yaml
+++ b/gitops/tap-build/pivnet-registry-dependencies.yaml
@@ -1,15 +1,3 @@
-apiVersion: secretgen.carvel.dev/v1alpha1
-kind: SecretExport
-metadata:
-  name: tanzu-gitops-tap-build
-  namespace: ellin-system
-  annotations:
-    kapp.k14s.io/change-group: install-registry-export
-    tanzu-sync.tanzu.vmware.com/variant: sops
-    tanzu-sync.tanzu.vmware.com/version: 1.6.0-rc.2
-spec:
-  toNamespaces:
-  - '*'
 ---
 apiVersion: secretgen.carvel.dev/v1alpha1
 kind: SecretExport
@@ -19,41 +7,8 @@ metadata:
   annotations:
     kapp.k14s.io/change-group: install-registry-export
     tanzu-sync.tanzu.vmware.com/variant: sops
-    tanzu-sync.tanzu.vmware.com/version: 1.6.0-rc.2
+    tanzu-sync.tanzu.vmware.com/version: 0.1.0+2023-04-06-214153_(8eaba70)
 spec:
   toNamespaces:
   - '*'
----
-apiVersion: secretgen.carvel.dev/v1alpha1
-kind: SecretExport
-metadata:
-  name: age-key
-  namespace: ellin-system
-  annotations:
-    kapp.k14s.io/change-group: install-registry-export
-    tanzu-sync.tanzu.vmware.com/variant: sops
-    tanzu-sync.tanzu.vmware.com/version: 1.6.0-rc.2
-spec:
-  toNamespaces:
-  - tanzu-sync
----
-apiVersion: secretgen.carvel.dev/v1alpha1
-kind: SecretImport
-metadata:
-  name: age-key
-  namespace: tanzu-sync
-  annotations:
-    kapp.k14s.io/change-group: install-registry-export
-    tanzu-sync.tanzu.vmware.com/variant: sops
-    tanzu-sync.tanzu.vmware.com/version: 1.6.0-rc.2
-spec:
-  fromNamespace: ellin-system
----
-apiVersion: secretgen.carvel.dev/v1alpha1
-kind: SecretImport
-metadata:
-  name: tanzu-gitops-tap-build
-  namespace: tanzu-sync
-spec:
-  fromNamespace: ellin-system
 ---
