--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -65,6 +65,14 @@ tap-iterate:
         clusterName: tap-iterate 
     - name: external-dns 
     - name: contour
+    - name: tap-full
+      options:
+        tap_install:
+          values:
+            cnrs:
+              domain_name: tap-iterate.lab.ellin.net
+            shared:
+              ingress_domain: tap-iterate.lab.ellin.net
 
 tap-run-1:
   roles:
