--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -65,7 +65,7 @@ tap-iterate:
         clusterName: tap-iterate 
     - name: external-dns 
     - name: contour
-    - name: tap-full
+    - name: tap-iterate
       options:
         tap_install:
           values:
