add remote config

--- a/gitops/tap-view/tap-app.yaml
+++ b/gitops/tap-view/tap-app.yaml
@@ -32,5 +32,7 @@ spec:
       - path: values
       - secretRef:
           name: tanzu-gitops-tap-view
+      - secretRef:
+          name: tap-remote-view-secrets
   deploy:
   - kapp: {}
