--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -60,21 +60,17 @@ tap-iterate:
             shared:
               ingress_domain: tap-iterate.lab.ellin.net
     - name: letsencrypt-issuer
-tap-run-1:
+aks.be7fd3a2.azuresa.tap-run:
   roles:
-    - name: ako
-      options:
-        clusterName: tap-run 
-    - name: external-dns 
     - name: contour
     - name: tap-run
       options:
         tap_install:
           values:
             cnrs:
-              domain_name: something.lab.ellin.net
+              domain_name: run-1.lab.ellin.net
             shared:
-              ingress_domain: something.lab.ellin.net
+              ingress_domain: run-1.lab.ellin.net
     - name: letsencrypt-issuer
 tap-view:
   roles:
