--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -60,7 +60,7 @@ tap-iterate:
             shared:
               ingress_domain: tap-iterate.lab.ellin.net
     - name: letsencrypt-issuer
-aks.be7fd3a2.azuresa.tap-run:
+aks.be7fd3a2.azuresa.tap-run-1:
   roles:
     - name: contour
     - name: tap-run
