--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -60,6 +60,22 @@ tap-iterate:
             shared:
               ingress_domain: tap-iterate.lab.ellin.net
     - name: letsencrypt-issuer
+tap-run-1:
+  roles:
+    - name: ako
+      options:
+        clusterName: tap-run 
+    - name: external-dns
+    - name: contour
+    - name: tap-run
+      options:
+        tap_install:
+          values:
+            cnrs:
+              domain_name: run-1.home.lab.ellin.net
+            shared:
+              ingress_domain: run-1.home.lab.ellin.net
+    - name: letsencrypt-issuer
 aks.be7fd3a2.azuresa.tap-run-1:
   roles:
     - name: external-dns
