--- a/gitops/base/values/values.yaml
+++ b/gitops/base/values/values.yaml
@@ -89,11 +89,8 @@ aks.be7fd3a2.azuresa.tap-run-1:
             shared:
               ingress_domain: run-1.lab.ellin.net
     - name: letsencrypt-issuer
-tap-view:
+aks.be7fd3a2.azuresa.tap-view:
   roles:
-    - name: ako
-      options:
-        clusterName: tap-view 
     - name: external-dns 
     - name: contour
     - name: tap-view
